fixed alignment of Qty and price in shopping cart widget

--- a/style.css
+++ b/style.css
@@ -377,20 +377,12 @@ html {
     height: 292px;
   }
 }
-/*
-.isotope-item .main-image img {
-    width: 377px;
-    height: 377px;
-    max-width: 370px;
-    max-height: 370px;
-}*/
 
 /* Fix product thumbnail title length */
 .slide-item .product .product-name, .products-grid .product .product-name {
   max-width: 180px;
   font-size: 14px;
   text-transform: none;
-  /*opacity: 0;*/
   margin-bottom: 0;
   min-height: 42px;
   max-height: 42px;
@@ -431,7 +423,6 @@ html {
 /* Fix float of sort grid */
 @media (min-width: 481px) and (max-width: 767px){
   .toolbar .woocommerce-ordering{
-    /* float: right; */
     margin-left: 10px;
   }
 }
@@ -710,4 +701,9 @@ div#content_tab_simle_auction_history {
 /* Hide label for variations of giclees */
 .variations label[for="pa_version-short"]{
   display: none;
+}
+
+/* Fix alignment of Qty and price in shopping cart widget */
+.shopping-cart-widget .widget_shopping_cart_content ul li .media .media-body .descr-box .medium-coast {
+  width: 100%;
 }
